# magni_robot

./: README.md
ground_fiducials/: CMakeLists.txt  package.xml
ground_fiducials/launch/: ground_fiducials.launch  sim_fiducials.launch  sim_smooth_fiducials.launch  smooth_fiducials .launch  smooth_fiducials.launch
ground_fiducials/scripts/: ground_fiducials.py  smooth_fiducials.py
magni_description/urdf/: magni.urdf.xacro
magni_description/urdf/sensors/: raspi_camera_v2.xacro
magni_gazebo/: CMakeLists.txt  package.xml
magni_gazebo/launch/: magni.launch  rviz_config.rviz
magni_gazebo/launch/simulation/: world.launch
magni_gazebo/launch/symulation/: world.launch
magni_gazebo/models/tag/: model.config  model.sdf
magni_gazebo/models/tag/material/scripts/: tag.material
magni_gazebo/script/: line_logger.py  log_path.py
magni_gazebo/src/: simple_world.cpp
magni_gazebo/worlds/: sw.world
